# cifar10_classifier

./: CMakeLists.txt  Classifier.cpp  Classifier.h  Dataset.cpp  Dataset.h  README.md  main.cpp
